--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,9 @@
----
-layout: default
----
-
-<small>{{ page.date | date: "%-d %B %Y" }}</small>
 <h1>{{ page.title }}</h1>
+<small>{{ page.date | date: "%-d %B %Y" }}</small>
+
+{% if page.tags %}
+  <small>tags: <em>{{ page.tags | join: "` - `" }}</em></small>
+{% endif %}
 
 {{content}}
 
-{% if page.tags %}
-  <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
-{% endif %}
