--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,12 @@
 ---
 layout: default
 ---
+
 <h1>{{ page.title }}</h1>
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 
 {% if page.tags %}
-<small>tags: <code>{{ page.tags | array_to_sentence_string }}</code></small>
+<small>tags: <code>{{ page.tags | join(" - ") }}</code></small>
 {% endif %}
 
 {{content}}
