--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,16 +29,17 @@
 
       <div class="post-navigation">
         {% if page.previous %} 
-        <a href="{{ page.previous.url | relative_url }}">
-          <small>← 上一篇：</small>
-          {{ page.previous.title }}</a>
+          <a href="{{ page.previous.url | relative_url }}">
+            <small>← 上一篇：</small>
+            {{ page.previous.title }}
+          </a>
         {% endif %}
         <br>
-        {% if page.next %} |
-        <a href="{{ page.next.url | relative_url }}">
-          <small>下一篇: →</small>
-          {{ page.next.title }}
-        </a>
+        {% if page.next %}
+          <a href="{{ page.next.url | relative_url }}">
+            <small>下一篇: →</small>
+            {{ page.next.title }}
+          </a>
         {% endif %}
       </div>
     </div>
