--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,10 +3,12 @@
 
 // 引入主题的默认样式
 @import "{{ site.theme }}";
+
+// 自定义样式
 body, h1, h2, h3, h4, h5, h6 {
   color: #111112;
 }
-// 自定义样式
+
 a,
 a:link,
 a:visited {
@@ -16,11 +18,19 @@ a:visited {
 }
 a:hover {
   font-weight: normal;
-  text-decoration: underline #000050;
+  text-decoration: underline #0000aa;
+}
+.view a {
+  color: #0000aa;
 }
 
 ul {
+  padding-inline-start: 10px;
   list-style-type: "\2022";
+}
+
+li {
+  text-indent: 0.5em;
 }
 
 // 用户头像
@@ -44,17 +54,40 @@ h1.title {
 }
 
 // 文章图片
-p img {
-  box-shadow: 0px 0px 10px #f5f5f5;
+// :has 2023 available
+p:has(img) {
+  box-shadow: 0px 0px 8px #f5f5f5;
   border-radius: 16px;
-  padding: 8px;
-  box-sizing: border-box;
+  padding: 8px 16px;
+}
+// :has 伪类降级处理
+@supports not selector(p:has(img)) {
+  p img {
+    box-shadow: 0px 0px 8px #f5f5f5;
+    border-radius: 16px;
+    padding: 8px;
+  }
 }
 
 // 引用块
 blockquote {
   font-style: normal;
-  color: #3c3c3c;
+  color: #4c4c4c;
+}
+
+// 代码块
+code, pre {
+  font-family: Consolas;
+}
+
+pre {
+  border: none;
+}
+
+// 文章底部导航
+.post-navigation {
+  background: #f3f4f6;
+  padding: 10px 12px;
 }
 
 @media screen and (max-width: 480px) {
@@ -65,10 +98,4 @@ blockquote {
     width: 40px;
     vertical-align: bottom;
   }
-}
-
-// 文章底部导航
-.post-navigation {
-  background: #f3f4f6;
-  padding: 10px 12px;
 }
