--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>{{ page.title }}</h1>
-      <p>
+      <h1 class="article-title">{{ page.title }}</h1>
+      <p class="article-desc">
         <small>{{ page.date | date: "%Y年%m月%d日" }}</small>
 
         {% if page.tags %}
